[package]
name = "moon"
version = "0.1.0"
authors = ["liubin <liubin01@zhihu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4.8"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
dirs = "2.0"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
chrono = { version = "0.4", features = ["serde"] }
